Kubernetes/mongo/mongoExpress.yml
apiVersion: v1
kind: Deployment
metadata:
  name: mongo-Express-deployment
  labels:
    app: mongo-Express
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mongo-Express
  template:
    metadata:
      labels:
        app: mongo-Express
    spec:
      containers:
      - name: mongo-Express
        image: mongo:3.4.1
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-Express-service
spec:
  selector:
    app: mongo-Express
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
    nodePort: 30001
