Kubernetes/mongo/dashboard-ingress.yml
apiVersion: v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  labels:
    app: dashboard
spec:
  tls:
  - hosts:
    - kubernetes.default.svc
    secretName: myapp-secret-tls
  rules:
  - host: kubernetes-dashboard.kube-system.svc.cluster.local
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 9090
        path: /
